fix(gtk): fix alignment issues with nautilus sidebar in gnome v50

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -4164,45 +4164,44 @@ stacksidebar row {
 placessidebar {
   background-color: transparent;
   background-image: linear-gradient(to right, #111416 40px, #16191b 35px, #16191b 36px, #16191b 36px, #16191b 99%, #16191b 100%); }
-  placessidebar row {
-    padding: 2px 11px; }
-    placessidebar row.sidebar-row {
-      margin: 0;
-      border-radius: 0; }
-      placessidebar row.sidebar-row label {
-        color: #B6B7B9;
-        padding-left: 30px; }
-      placessidebar row.sidebar-row:hover {
-        transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        background-color: transparent;
-        /*rgba(65,67,75,0.4); */
-        background-image: linear-gradient(to right, #1b232d 40px, #21262a 40px, #21262a 97%); }
-      placessidebar row.sidebar-row:selected {
-        color: rgba(255, 255, 255, 0.938);
+  placessidebar row.activatable {
+    padding: 2px 11px;
+    margin: 0;
+    border-radius: 0; }
+    placessidebar row.activatable label {
+      color: #B6B7B9;
+      padding-left: 30px; }
+    placessidebar row.activatable:hover {
+      transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      background-color: transparent;
+      /*rgba(65,67,75,0.4); */
+      background-image: linear-gradient(to right, #1b232d 40px, #21262a 40px, #21262a 97%); }
+    placessidebar row.activatable:selected {
+      color: rgba(255, 255, 255, 0.938);
+      background-color: transparent;
+      background-image: linear-gradient(to right, #0a0c0d 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
+      placessidebar row.activatable:selected label {
+        color: #f7f7f7; }
+      placessidebar row.activatable:selected:backdrop {
+        color: rgba(247, 247, 247, 0.5);
         background-color: transparent;
         background-image: linear-gradient(to right, #0a0c0d 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-        placessidebar row.sidebar-row:selected label {
-          color: #f7f7f7; }
-        placessidebar row.sidebar-row:selected:backdrop {
+        placessidebar row.activatable:selected:backdrop .sidebar-icon {
           color: rgba(247, 247, 247, 0.5);
-          background-color: transparent;
-          background-image: linear-gradient(to right, #0a0c0d 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-          placessidebar row.sidebar-row:selected:backdrop .sidebar-icon {
-            color: rgba(247, 247, 247, 0.5);
-            -gtk-icon-shadow: 0 1px rgba(247, 247, 247, 0.3); }
-        placessidebar row.sidebar-row:selected .sidebar-icon {
-          -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
-          color: inherit; }
-      placessidebar row.sidebar-row.sidebar-new-bookmark-row, placessidebar row.sidebar-row.sidebar-new-bookmark-row label, placessidebar row.sidebar-row.sidebar-new-bookmark-row .sidebar-icon {
-        color: #E1DD8F; }
-      placessidebar row.sidebar-row:drop(active):not(:disabled) {
-        box-shadow: inset 0 1px #CAE7B9, inset 0 -1px #CAE7B9; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled), placessidebar row.sidebar-row:drop(active):not(:disabled) label, placessidebar row.sidebar-row:drop(active):not(:disabled) image {
-          color: #CAE7B9; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled):selected {
-          background: #CAE7B9; }
-          placessidebar row.sidebar-row:drop(active):not(:disabled):selected, placessidebar row.sidebar-row:drop(active):not(:disabled):selected label, placessidebar row.sidebar-row:drop(active):not(:disabled):selected image {
-            color: #f7f7f7; }
+          -gtk-icon-shadow: 0 1px rgba(247, 247, 247, 0.3); }
+      placessidebar row.activatable:selected .sidebar-icon {
+        -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
+        color: inherit; }
+    placessidebar row.activatable.sidebar-new-bookmark-row, placessidebar row.activatable.sidebar-new-bookmark-row label, placessidebar row.activatable.sidebar-new-bookmark-row .sidebar-icon {
+      color: #E1DD8F; }
+    placessidebar row.activatable:drop(active):not(:disabled) {
+      box-shadow: inset 0 1px #CAE7B9, inset 0 -1px #CAE7B9; }
+      placessidebar row.activatable:drop(active):not(:disabled), placessidebar row.activatable:drop(active):not(:disabled) label, placessidebar row.activatable:drop(active):not(:disabled) image {
+        color: #CAE7B9; }
+      placessidebar row.activatable:drop(active):not(:disabled):selected {
+        background: #CAE7B9; }
+        placessidebar row.activatable:drop(active):not(:disabled):selected, placessidebar row.activatable:drop(active):not(:disabled):selected label, placessidebar row.activatable:drop(active):not(:disabled):selected image {
+          color: #f7f7f7; }
   placessidebar list {
     background-color: transparent; }
     placessidebar list:backdrop {
